<resources>
    <string name="app_name">Cicerone</string>
    <string name="username">Username</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="photo">Photo</string>
    <string name="biography">Biography</string>
    <string name="role">Role</string>
    <string name="first_last_name">First and last name</string>
    <string name="cicerone_role_cap">Cicerone</string>
    <string name="globetrotter_role_cap">Globetrotter</string>
    <string name="login">Sign in for Cicerone</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Sign up for Cicerone</string>
    <string name="sign_up">Sign up</string>
    <string name="empty_email">E-Mail not inserted or wrong</string>
    <string name="empty_password">Password not inserted</string>
    <string name="user_found">Access granted! Welcome to Cicerone!</string>
    <string name="user_not_found">Wrong username or password! Try again</string>
    <string name="need_help">Password recovery</string>
    <string name="password_recovery_dialog">
        Have you forgot your password?\nDon\'t worry!\nInsert your email here, we provide to
        send you an email with a new password.\nRemember to change it after you sign in.
    </string>
    <string name="send_mail">Send e-mail</string>
    <string name="sending_mail">Sending e-mail...</string>
    <string name="recovery_email_object">Recovery password - Cicerone</string>
    <string name="recovery_email_body">
        Hi,\nafter the request you made, we sent you a new password to be able to access
        the service offered by Cicerone with your account. Remember to change your
        password as soon as you log in to Cicerone.
    </string>
    <string name="recovery_email_password">The new password is </string>
    <string name="recovery_email_conclusion">\nEnjoy your time in Cicerone!</string>
    <string name="logging_in">Logging in...</string>
    <string name="signing_in">Sign in...</string>
    <string name="oops_json">OOPS! Something went wrong with login. Try again!</string>
    <string name="success_sign_in">You are signed in Cicerone! Login for starting using the service.</string>
    <string name="empty_fields">Some fields are empty! Please complete them.</string>
    <string name="register_compiling_field">Insert your data</string>
    <string name="are_you_role">Are you a cicerone or a globetrotter?</string>
    <string name="are_you_signed">Are you already signed? Sign in!</string>
    <string name="about_me">About me</string>
    <string name="name">Name</string>
    <string name="spoken_languages">Spoken languages</string>
    <string name="my_account">My Account</string>
    <string name="no_information">No informations</string>
    <string name="acquiring_data">Acquiring data...</string>
    <string name="saving_data">Saving data...</string>
    <string name="success_save_data">Data stored successfully</string>
    <string name="error_save_data">Error in storing data</string>
    <string name="tour_data_before_event_data">There is at least an event whose date is later than the date entered</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="change_photo">Change profile photo</string>
    <string name="edit_spoken_languages">Add/remove spoken languages</string>
    <string name="edit_password">Edit password</string>
    <string name="submit">Submit</string>
    <string name="success_edit">Profile edited successfully</string>
    <string name="empty_name">Name not inserted</string>
    <string name="empty_phone">Phone number not inserted or wrong</string>
    <string name="logout_message">Are you sure you want to exit from Cicerone?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="terms_service">Terms of service</string>
    <string name="delete_account">Delete account</string>
    <string name="language">Select language</string>
    <string name="select_language_message">
        Selecting one of the following language.\nOnce you have selected the language you want,
        the application translate the actual text and reload the content.
    </string>
    <string name="change_language_message">Changing language to</string>
    <string name="en">English</string>
    <string name="it">Italian</string>
    <string name="insert_old_password">Insert old password</string>
    <string name="insert_new_password">Insert new password</string>
    <string name="reinsert_new_password">Reinsert new password</string>
    <string name="wrong_password">Inserted wrong old password</string>
    <string name="new_password_different">The insert and reinserted passwords are not equals</string>
    <string name="new_password_no_change">The old and new passwords are equals</string>
    <string name="success_change_password">Password changed successfully</string>
    <string name="success_change_spoken_languages">Spoken languages changed successfully</string>
    <string name="my_tours">My tours</string>
    <string name="new_tour">New tour</string>
    <string name="valid_tours">Ongoing</string>
    <string name="past_tours">Past</string>
    <string name="tour_name">Tour name</string>
    <string name="tour_description">Description</string>
    <string name="tour_cost">Cost</string>
    <string name="tour_start_and_end_date">Start and end tour date</string>
    <string name="tour_start_and_end_date_description">
        Warning! The start and end date
        of the tour are meant to be the dates
        within which one or more event related to it
        can be done.
    </string>
    <string name="tour_locations">Locations</string>
    <string name="add_location">Add location</string>
    <string name="no_location">No locations</string>
    <string name="no_date">No date</string>
    <string name="reset">Reset</string>
    <string name="selected_location">Selected locations</string>
    <string name="wrong_date_after">The start date is later than the end date</string>
    <string name="wrong_date_after_tour">The start date is later than the tour\'s end date</string>
    <string name="wrong_date_before_now">One or both dates are previous or equals than today\'s date</string>
    <string name="wrong_date_before_n_days">The start and end date cannot be earlier than</string>
    <string name="wrong_end_date_before_now">The end date is previous than today\'s date</string>
    <string name="acquiring_tour_data">Loading tour data...</string>
    <string name="no_tour_associated">You have no tour associated</string>
    <string name="start_inserting_tour">Let\'s start with adding a new tour!</string>
    <string name="start_registering_tour">Let\'s start with subscribing to a new tour!</string>
    <string name="tour_search">Search on tours</string>
    <string name="no_tour_find">No tour find</string>
    <string name="better_search_keywords">Try again with better keywords</string>
    <string name="tour_search_content_cicerone">Search for content or cicerone</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="no_notifications_find">No notifications find</string>
    <string name="notifications_from">Notification from:</string>
    <string name="notifications_object">Object:</string>
    <string name="notifications_tour">Event tour</string>
    <string name="notifications_created_on">Send on</string>
    <string name="notification_start_end_date">Start and end event dates</string>
    <string name="event_description">Event description</string>
    <string name="notification_description">Notification message</string>
    <string name="tour">Tour</string>
    <string name="tour_info">Tour general info</string>
    <string name="tour_events">Tour Events</string>
    <string name="tour_no_events">There are no events set</string>
    <string name="chooice_event">Choose an event</string>
    <string name="chooice_event_description">
        Select an event from the list below. By selecting it, you can view its
        information and you can decide later whether or not to request the subscription
        to its cicerone.
    </string>
    <string name="not_available_event">No longer available</string>
    <string name="expired_event">Expired</string>
    <string name="not_available_event_description">The event is not available due to lack of vacancies</string>
    <string name="expired_event_description">The event is not available due to expired date</string>
    <string name="subs_remaining_event">places available</string>
    <string name="selected_event">Selected event</string>
    <string name="selected_event_data">Data from selected event</string>
    <string name="already_subscribed_event">Already subscribed</string>
    <string name="already_requested_event">Already requested</string>
    <string name="already_subscribed_event_description">This event is already subscribed</string>
    <string name="already_requested_event_description">This event is already requested</string>
    <string name="already_requested_denied_event_description">
        This event was already requested but the cicerone denied your request.
        You cannot re-send another request for this event.
    </string>
    <string name="event_spoken_languages">Event spoken languages</string>
    <string name="event_additional_description">Additional description for the event</string>
    <string name="tour_cost_per_person">Cost per person</string>
    <string name="event_group_dimension">Size of your group</string>
    <string name="event_group_dimension_description">
        Insert the size of your group. It is important for the cicerone to know
        the number of people who apply to participate in this event. Note that
        if the group is deemed too large or there are not enough vacancies, the
        request may be rejected by the cicerone.
    </string>
    <string name="selected_event_data_description">
        In the following section are shown all the information related to the selected event.
        Also, is included a form for the insertion of the size of the group that requires to participate
        in the same event. If the event has a price (defined as cost per person) you
        will be asked, after acceptance of the request, to make payment, executable within
        the maximum period of three days from the start of the event. If the payment is not
        executed and expiration is reached, the cicerone has the right to cancel the
        registration. However, the maximum payment term may be subject to variations at
        the behest of the cicerone.
    </string>
    <string name="send_request">Send request</string>
    <string name="negative_group_dimension">Cannot insert a negative or zero size for group</string>
    <string name="group_dimension_excedeed_max_subscribed">The size of group exceeds the maximum of subscriptions</string>
    <string name="group_dimension_sum_excedeed_max_subscribed">The size of group needs more vacancies than available</string>
    <string name="oops_request">Oops! Something went wrong with your request. Try again!</string>
    <string name="request_send_successfully">Request send successfully!</string>
    <string name="edit_tour_title">Edit tour</string>
    <string name="tour_cannot_change_cost_for_event">
        The tour cannot have a cost change because there are already events
    </string>
</resources>