<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.ShowSelectedEventFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/selected_event"
                android:textAlignment="center"
                android:textColor="@color/text_on_background"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/selected_event_data_description"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/selected_event_data"
                android:textColor="@color/text_on_background"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/notification_start_end_date"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/text_on_background"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/event_spoken_languages"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/languages_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/text_on_background"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/tour_description"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tour_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/text_on_background"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/event_additional_description"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/event_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/text_on_background"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/tour_locations"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locations_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/text_on_background"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/tour_cost_per_person"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cost_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/text_on_background"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/event_group_dimension_description"
                android:textColor="@color/text_on_background"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/event_group_dimension"
                android:textColor="@color/text_on_background"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/group_dimension_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:inputType="number"
                android:text="1" />

            <Button
                android:id="@+id/send_request_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/auth_button"
                android:text="@string/send_request"
                android:textAlignment="center"
                android:textColor="@color/text_on_background"
                android:textSize="25sp"
                android:textStyle="bold" />



        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>